--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 
     <modules>
         <module>Conversion</module>
+        <module>Signs</module>
     </modules>
 
     <properties>
@@ -68,7 +69,7 @@
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>EconomyCore</artifactId>
-            <version>0.1.2.0-PRE-1</version>
+            <version>0.1.2.0-PRE-8</version>
             <scope>provided</scope>
         </dependency>
         <!-- Part of Java EE, removed from Java SE in JDK11 -->
