Remove outdated Converters, Work on converting over remaining to new system.

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <modules>
         <module>Conversion</module>
         <module>Signs</module>
+        <module>Mobs</module>
     </modules>
 
     <properties>
