--- a/Conversion/pom.xml
+++ b/Conversion/pom.xml
@@ -90,4 +90,20 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>Essentials</id>
+            <url>https://repo.essentialsx.net/releases/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>net.essentialsx</groupId>
+            <artifactId>EssentialsX</artifactId>
+            <version>2.20.1</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
 </project>
