--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
         <module>Conversion</module>
         <module>Signs</module>
         <module>Mobs</module>
+        <module>GroupAccount</module>
+        <module>Jobs</module>
+        <module>Banks</module>
     </modules>
 
     <properties>
@@ -70,25 +73,25 @@
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>BukkitCore</artifactId>
-            <version>0.1.2.0-Pre-20</version>
+            <version>0.1.2.0-Pre-28</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>Paper</artifactId>
-            <version>0.1.2.0-Pre-20</version>
+            <version>0.1.2.0-Pre-28</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>Sponge8Core</artifactId>
-            <version>0.1.2.0-Pre-20</version>
+            <version>0.1.2.0-Pre-28</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>EconomyCore</artifactId>
-            <version>0.1.2.0-Pre-20</version>
+            <version>0.1.2.0-Pre-28</version>
             <scope>provided</scope>
         </dependency>
         <!-- Part of Java EE, removed from Java SE in JDK11 -->
