--- a/Conversion/pom.xml
+++ b/Conversion/pom.xml
@@ -95,6 +95,10 @@
             <id>Essentials</id>
             <url>https://repo.essentialsx.net/releases/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -102,6 +106,12 @@
             <groupId>net.essentialsx</groupId>
             <artifactId>EssentialsX</artifactId>
             <version>2.20.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.YiC200333</groupId>
+            <artifactId>XConomyAPI</artifactId>
+            <version>2.21.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
