XConomy SQLite patch.

--- a/Conversion/pom.xml
+++ b/Conversion/pom.xml
@@ -102,6 +102,13 @@
     </repositories>
 
     <dependencies>
+        <!-- Pooling For Performance -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>net.essentialsx</groupId>
             <artifactId>EssentialsX</artifactId>
