--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,6 @@
 
     <properties>
         <tne.relocation>net.tnemc.libs</tne.relocation>
-        <tne.java>17</tne.java>
-        <maven.compiler.target>17</maven.compiler.target>
         <maven.javadoc.plugin.version>3.0.1</maven.javadoc.plugin.version>
         <maven.source.version>3.2.0</maven.source.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -74,19 +72,19 @@
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>BukkitCore</artifactId>
-            <version>0.1.2.6-Pre1</version>
+            <version>0.1.3.2-PRE-3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>Sponge8Core</artifactId>
-            <version>0.1.2.1-Pre-2</version>
+            <version>0.1.3.2-PRE-3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>EconomyCore</artifactId>
-            <version>0.1.2.8-Pre-1</version>
+            <version>0.1.3.2-PRE-3</version>
             <scope>provided</scope>
         </dependency>
         <!-- Part of Java EE, removed from Java SE in JDK11 -->
